feat: 添加模型解绑功能并优化WebSocket消息处理
添加设备数据面板的模型解绑功能，包括前端事件处理和状态更新
优化WebSocket消息处理，使用HashMap替代Map.of以提高兼容性
更新.gitignore文件，排除application-1.yml配置文件